overflow safari issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .appContainer{
   position: relative;
+  overflow-x: hidden;
+  position: relative;
+  height: 100%;
 }
 
 /* hero section */
