--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
-  position: relative;
-  height: 100%;
 }
 .logo{
   font-style: italic;
